--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,6 +197,7 @@
             android:id="@+id/nextBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="reset"
             android:text="NEXT" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
