--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,14 @@
     <color name="colorSecondaryVariant">#c4001d</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#ff0000</color>
+    <color name="blue">#0000ff</color>
+    <color name="yellow">#ffff00</color>
+
+    <color name="orange">#ff7f00</color>
+    <color name="purple">#800080</color>
+    <color name="green">#008000</color>
+
+    <color name="success">#76ff03</color>
+    <color name="error">#D50000</color>
 </resources>
