--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,34 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity2">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginVertical="30dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:orientation="vertical"
+        android:text="Enter your Name"
+        android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="30dp"
-            android:text="Enter your Name"
-            android:textSize="24dp" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:gravity="center"
-            android:hint="Put your name"
-            android:minHeight="48dp" />
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -44,12 +30,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/name">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Choose 2 colors: "
+            android:text="What color is mixed ? "
             android:textSize="25sp" />
 
         <RadioGroup
@@ -62,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center">
-                <CheckBox
+                <RadioButton
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -70,7 +56,7 @@
                 <RelativeLayout
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@color/blue" />
+                    android:background="@color/purple" />
             </LinearLayout>
 
 
@@ -78,29 +64,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center">
-                <CheckBox
+                <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <RelativeLayout
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@color/red" />
+                    android:background="@color/green" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center">
-                <CheckBox
+                <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <RelativeLayout
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@color/yellow" />
+                    android:background="@color/orange" />
             </LinearLayout>
-            </RadioGroup>
+        </RadioGroup>
     </LinearLayout>
 
     <Button
