--- a/app/src/main/res/layout/experience_list_item.xml
+++ b/app/src/main/res/layout/experience_list_item.xml
@@ -31,7 +31,7 @@
         android:text="Company Name"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/companyImage"
         app:layout_constraintEnd_toStartOf="@+id/companyAddress"
         app:layout_constraintHorizontal_bias="0.178"
@@ -48,7 +48,7 @@
         android:text="Company Address"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/companyImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -86,15 +86,30 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="90dp"
         android:layout_marginBottom="16dp"
         android:text="Text"
         android:textColor="@color/colorPrimary"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateJob"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/deleteExpIcon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/baseline_delete_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/companyImage"
+        app:layout_constraintVertical_bias="0.0"
+        app:tint="@color/colorPrimary" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
