--- a/app/src/main/res/menu/menu_career.xml
+++ b/app/src/main/res/menu/menu_career.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<item android:id="@+id/info"
+<item android:id="@+id/AddExp"
     android:iconTint="@color/white"
     android:icon="@drawable/baseline_error_24"
-    android:title="Info"
-    app:showAsAction="always"
+    android:title="Add Experience"
+    app:showAsAction="withText"
     />
-    <item android:id="@+id/logout"
+    <item android:id="@+id/addEd"
         android:iconTint="@color/white"
         android:icon="@drawable/baseline_exit_to_app_24"
-        android:title="Logout"
-        app:showAsAction="always"
+        android:title="Add Education"
+        app:showAsAction="withText"
         />
 </menu>
